--- a/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
@@ -243,7 +243,7 @@
                                               VerticalAlignment="Center"
                                               HorizontalAlignment="Left"
                                               Grid.Row="1"
-                                              Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}"
+                                              Foreground="{TemplateBinding Foreground}"
                                               Margin="8,0"
                                               Content="{TemplateBinding Header}"
                                               ContentTemplate="{TemplateBinding HeaderTemplate}"
@@ -252,6 +252,7 @@
                             <Button x:Name="ExpanderButton"
                                     BorderThickness="0"
                                     Grid.Row="1"
+                                    Foreground="{TemplateBinding Foreground}"
                                     Grid.Column="1"
                                     HorizontalAlignment="Left"
                                     Background="Transparent"
