--- a/Microsoft.Toolkit.Uwp.UI.Controls/AdaptiveGridView/AdaptiveGridView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/AdaptiveGridView/AdaptiveGridView.xaml
@@ -8,8 +8,14 @@
 				<ControlTemplate TargetType="controls:AdaptiveGridView">
                     <Grid>
 						<ContentPresenter x:Name="templateProxy" Width="{TemplateBinding ItemWidth}" Height="{TemplateBinding ItemHeight}" ContentTemplate="{TemplateBinding ItemTemplate}" Visibility="Collapsed" />
-                        <GridView HorizontalAlignment="Stretch" x:Name="ListView" IsItemClickEnabled="{TemplateBinding IsItemClickEnabled}" SelectionMode="{TemplateBinding SelectionMode}" IsSwipeEnabled="False" IsTabStop="False" ScrollViewer.VerticalScrollMode="{TemplateBinding VerticalScrollMode}" ScrollViewer.VerticalScrollBarVisibility="Hidden"
-                                  SelectedIndex="{TemplateBinding SelectedIndex}" SelectedItem="{TemplateBinding SelectedItem}" ItemsSource="{TemplateBinding ItemsSource}" >
+                        <GridView HorizontalAlignment="Stretch" x:Name="ListView"
+                                  IsItemClickEnabled="{TemplateBinding IsItemClickEnabled}"
+                                  SelectionMode="{TemplateBinding SelectionMode}"
+                                  IsSwipeEnabled="False"
+                                  IsTabStop="False"
+                                  ScrollViewer.VerticalScrollMode="{TemplateBinding VerticalScrollMode}"
+                                  ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                                  ItemsSource="{TemplateBinding ItemsSource}">
                             <GridView.ItemTemplate>
                                 <DataTemplate>
 									<ContentPresenter Width="{Binding Width, ElementName=templateProxy}" Height="{Binding Height, ElementName=templateProxy}" ContentTemplate="{Binding ContentTemplate, ElementName=templateProxy}" />
