--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Bing Service/BingPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Bing Service/BingPage.xaml
@@ -33,6 +33,7 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Vertical" Margin="10">
             <TextBox Header="Request:" x:Name="SearchText" Text="UWP"></TextBox>
+            <ComboBox x:Name="QueryType" Header="Type:" HorizontalAlignment="Stretch"></ComboBox>
             <Button Content="Search" x:Name="SearchButton" Click="SearchButton_OnClick" Margin="0,10,0,0"></Button>
         </StackPanel>
         <ListView Grid.Row="1" ItemTemplate="{StaticResource BingSchemaTemplate}" x:Name="ListView">
