Added SelectionMode to the property grid.

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdaptiveGridView/AdaptiveGridViewPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdaptiveGridView/AdaptiveGridViewPage.xaml
@@ -24,6 +24,7 @@
           x:Name="AdaptiveGridViewControl"
           ItemHeight="{Binding ItemHeight.Value}"
           DesiredWidth="{Binding DesiredWidth.Value}"
+          SelectionMode="{Binding SelectionMode.Value,Mode=TwoWay}"
           ItemTemplate="{StaticResource PhotosTemplate}"/>
 	</Grid>
 </Page>
