Allow changing AdaptiveGridView's OneRowModeEnabled property on-the-fly

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdaptiveGridView/AdaptiveGridViewPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdaptiveGridView/AdaptiveGridViewPage.xaml
@@ -24,6 +24,7 @@
           x:Name="AdaptiveGridViewControl"
           ItemHeight="{Binding ItemHeight.Value}"
           DesiredWidth="{Binding DesiredWidth.Value}"
+          OneRowModeEnabled="{Binding OneRowModeEnabled.Value}"
           ItemTemplate="{StaticResource PhotosTemplate}"/>
 	</Grid>
 </Page>
