Add the AdaptiveGridView.ItemAspectRatio property so items can resize with a fixed aspect ratio

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdaptiveGridView/AdaptiveGridViewPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/AdaptiveGridView/AdaptiveGridViewPage.xaml
@@ -22,8 +22,9 @@
 	<Grid Background="{StaticResource Brush-Grey-05}">
 		<controls:AdaptiveGridView
           x:Name="AdaptiveGridViewControl"
-          ItemHeight="{Binding ItemHeight.Value}"
+          ItemHeight="{Binding ItemHeight.Value, Mode=TwoWay}"
           DesiredWidth="{Binding DesiredWidth.Value}"
+          ItemAspectRatio="{Binding ItemAspectRatio.Value}"
           OneRowModeEnabled="{Binding OneRowModeEnabled.Value}"
           ItemTemplate="{StaticResource PhotosTemplate}"/>
 	</Grid>
