--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ColumnResizer/ColumnResizerPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ColumnResizer/ColumnResizerPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ColumnResizer.ColumnResizerPage"
+    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ColumnResizerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ColumnResizer"
+    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -14,6 +14,8 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
+        <TextBlock TextWrapping="WrapWholeWords">This text to simulate the resizing feature of the Column Resizer Control, try to change the resizer to see the effect</TextBlock>
+
         <controls:ColumnResizer 
             Grid.Column="1"
             Width="11"
@@ -21,5 +23,6 @@
             Foreground="White" FontSize="11" HorizontalAlignment="Left" >
 
         </controls:ColumnResizer>
+
     </Grid>
 </Page>
